# AuroraAI-Service

./: CMakeLists.txt  README.md
AIApps/ChatServer/include/AIUtil/: AIFactory.h  AIStrategy.h
AIApps/ChatServer/resource/: entry.html
AIApps/ChatServer/src/: ChatServer.cpp  main.cpp
AIApps/ChatServer/src/AIUtil/: AIConfig.cpp  AIHelper.cpp  AIStrategy.cpp  AIToolRegistry.cpp  MQManager.cpp
AIApps/ChatServer/src/handlers/: AIMenuHandler.cpp  AIUploadHandler.cpp  ChatEntryHandler.cpp  ChatHandler.cpp
AIApps/ChatServer/web/: .env.development  .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
AIApps/ChatServer/web/src/: style.css
AIApps/ChatServer/web/src/router/: index.js
AIApps/ChatServer/web/src/services/: api.js
AIApps/ChatServer/web/src/views/: ChatView.vue  EntryView.vue  MenuView.vue  NotFoundView.vue  UploadView.vue
HttpServer/include/http/: HttpContext.h  HttpRequest.h  HttpResponse.h  HttpServer.h
HttpServer/include/middleware/: Middleware.h  MiddlewareChain.h
HttpServer/include/middleware/cors/: CorsConfig.h  CorsMiddleware.h
HttpServer/include/router/: Router.h  RouterHandler.h
HttpServer/include/session/: Session.h  SessionManager.h  SessionStorage.h  SslConnection.h
HttpServer/include/ssl/: SslConfig.h  SslConnection.h  SslContext.h  SslTypes.h
HttpServer/include/utils/: FileUtil.h
HttpServer/include/utils/db/: DbConnection.h  DbConnectionPool.h  DbException.h
HttpServer/src/http/: HttpContext.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp
HttpServer/src/middleware/: MiddlewareChain.cpp
HttpServer/src/middleware/cors/: CorsMIddleware.cpp
HttpServer/src/router/: Router.cpp
HttpServer/src/session/: Session.cpp  SessionManager.cpp  SessionStorage.cpp
HttpServer/src/ssl/: SslConfig.cpp  SslConnection.cpp  SslContext.cpp
HttpServer/src/utils/db/: DbConnection.cpp  DbConnectionPool.cpp
vue AIApps/ChatServer/web/src/views/: EntryView.vue
